<resources>
    <string name="app_name">Foresight</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="foresight_logo">Foresight Logo</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="no_account">No account ?</string>
    <string name="already_have_an_account">Already Have an account ?</string>
    <string name="find_nearest_gym">Find nearest Gym</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="start_session">Start Session</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="next">Next</string>
    <string name="edit_session">Edit Session</string>
    <string name="session_name">Session Name</string>
    <string name="size">Size</string>
    <string name="weight">Weight</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="edit">Edit</string>
    <string name="finish">Finish</string>
    <string name="your_sessions">Your Sessions</string>
    <string name="nearest_gym">Nearest Gym</string>
    <string name="home">Home</string>
    <string name="search_gym">Search Gym</string>
    <string name="settings">Settings</string>
</resources>