<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:paddingHorizontal="60dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/foresight_logo" />
    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/input_border"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:background="@drawable/input_border"
        android:padding="10dp"
        android:autofillHints="" />
    <Button android:id="@+id/button"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signUp"
        android:text="@string/sign_up"
        tools:ignore="UsingOnClickInXml" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="@color/gray"
        android:onClick="goToSignInActivity"
        android:background="@android:color/transparent"
        tools:ignore="UsingOnClickInXml" />
</LinearLayout>
