<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="15dp"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/foresight_logo"
            android:src="@drawable/logo_small" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/gray"
                android:textSize="25sp" />
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:onClick="goToSettingsActivity"
            android:contentDescription="@string/settings_icon"
            android:src="@drawable/settings_icon"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

</LinearLayout>