<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="15dp">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/foresight_logo"
            android:src="@drawable/logo_small" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:contentDescription="@string/settings_icon"
            android:src="@drawable/settings_icon" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutGym"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="7dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/element_border"
        android:paddingHorizontal="20dp">
        <TextView
            android:id="@+id/sessionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exerciceState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/element_border"
        android:paddingHorizontal="20dp">

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">
        <Button android:id="@+id/buttonState"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="updateSessionState"
            android:text="@string/next"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

</LinearLayout>
